Fix arrow pixel shift

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -126,7 +126,7 @@ header{
 .arrow {
 	background-repeat: no-repeat;
 	background-position-x: right;
-	background-position-y: -1%; // Prevent the sort-of "aliasing"...
+	background-position-y: -1px; // Prevent the sort-of "aliasing"...
 	height: $arrowSize;
 
 	&.arrow-red {
